--- a/gb/src/scss/sections/_footer.scss
+++ b/gb/src/scss/sections/_footer.scss
@@ -7,18 +7,17 @@
       width: 100%;
       max-width: 100%;
       text-align: center;
-      color: $color-gray0;
+      color: #808693;
       font-size: 1.6rem;
       line-height: 1.38;
     }
 
     .text-link {
-      color: $color-gray0;
       text-decoration: underline;
+      color: #808693;
       &:hover {
         text-decoration: none;
       }
     }
   }
-
 }
