--- a/gb/src/scss/sections/_teaser.scss
+++ b/gb/src/scss/sections/_teaser.scss
@@ -24,13 +24,14 @@
       border-radius: 1.6rem;
       overflow: hidden;
       min-height: 25.5rem;
-      background-image: url("../img/page/teaser-mobile.jpg");
+      background-image: url("../img/page/teaser-mobile.png");
       background-size: cover;
-      background-position-x: right;
+      background-position-x: center;
       @media (min-width: $mobile-small) {
         border-radius: 2.4rem;
         min-height: 36rem;
-        background-image: url("../img/page/teaser-desktop.jpg");
+        background-image: url("../img/page/teaser-desktop.png");
+        background-position-x: center;
       }
 
       picture {
