--- a/gb/src/scss/sections/_teaser.scss
+++ b/gb/src/scss/sections/_teaser.scss
@@ -102,7 +102,9 @@
       }
     }
   }
-
+  .js-go-next {
+    cursor: pointer;
+  }
   .teaser-more {
     display: none;
     @media (min-width: $mobile-small) {
